--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -209,7 +209,11 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
+allow 176.65.149.100;
 allow 176.65.149.105;
+allow 176.65.149.84;
+allow 176.65.149.87;
+allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 178.162.175.5;
@@ -1309,7 +1313,11 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
