--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -209,7 +209,11 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.148.133;
 deny 176.65.148.3;
+deny 176.65.149.100;
 deny 176.65.149.105;
+deny 176.65.149.84;
+deny 176.65.149.87;
+deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
 deny 178.162.175.5;
@@ -1309,7 +1313,11 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
