--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -209,7 +209,11 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
+set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.105;
+set_real_ip_from 176.65.149.84;
+set_real_ip_from 176.65.149.87;
+set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.162.175.5;
@@ -1309,7 +1313,11 @@ set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
