--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -70,7 +70,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -511,7 +510,6 @@ allow 185.246.128.161;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
-allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
@@ -647,7 +645,6 @@ allow 194.26.192.77;
 allow 194.42.196.34;
 allow 194.53.137.156;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -949,7 +946,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1005,6 +1001,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1028,6 +1025,10 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f6f6:2:2634::1;
+allow 2602:f6f6:2:ad5c::1;
+allow 2602:f6f6:2:cd1f::1;
+allow 2602:f6f6:2:d31a::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1039,7 +1040,6 @@ allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
-allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
@@ -1067,7 +1067,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1250,7 +1249,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1627,8 +1625,8 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
+allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:1:1:194:26:192:77;
@@ -1694,6 +1692,8 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
+allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1711,11 +1711,13 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
+allow 38.135.24.30;
+allow 38.135.24.31;
+allow 38.135.24.32;
+allow 38.135.24.33;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
-allow 40.160.3.1;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1784,7 +1786,6 @@ allow 45.80.158.175;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
-allow 45.80.158.36;
 allow 45.80.158.69;
 allow 45.80.158.97;
 allow 45.8.22.207;
@@ -1987,6 +1988,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
@@ -2014,4 +2016,5 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
+allow 97.74.89.52;
 allow 98.128.173.33;
